Docs: overhaul documentation and migrate architectural warnings to Javadocs
- Deleted `update_presentation_new.py` script.
- Enhanced `Policy` Javadocs with explicit details on modern syscall handling via BPF argument inspection for `mmap`, `clone`, and `clone3`.
- Added comprehensive Javadocs to `ContainedExecutors` outlining security scope, lazy initialization traps, virtual thread limitations, and thread pool poisoning.
- Streamlined `README.md` by removing verbose problem descriptions and technical deep dives, focusing on concise usage and quick start instructions.
- Condensed `SECURITY_CONSIDERATIONS.md` to provide a high-level overview of security properties and the rationale behind the pure-Java implementation.